0027595: Mesh - faces without triangulations due to gp_VectorWithNullMagnitude exception

Zero magnitude check has been added before gp::Vec::Angle() usage